--- a/src/app/home/ui/home.component.css
+++ b/src/app/home/ui/home.component.css
@@ -17,7 +17,8 @@
     background-image:
       linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)),
       url("public/assets/home/delorean.webp");
-    background-size: 150% 100%;
+    /* background-size: 150% 100%; */
+    background-size: cover;
     background-position: center;
     z-index: -1;
     mask-image: url("public/assets/home/generated-black.gif");
@@ -69,11 +70,16 @@
   grid-template-areas: "text img";
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto;
+  gap: 1rem;
   align-items: stretch;
   outline: var(--outline-width) solid blue;
   padding: 1em;
   font-family: Arial, sans-serif;
   box-shadow: 1px 1px 1px 2px #ffffff08;
+
+  & figure {
+    margin: 0;
+  }
 
   & img {
     width: 100%;
