--- a/src/app/home/ui/home.component.css
+++ b/src/app/home/ui/home.component.css
@@ -118,7 +118,7 @@
       position: absolute;
       z-index: 1;
       inset: 0;
-      & video {
+      & img {
         width: 100%;
         height: 100%;
         border-radius: 1.25rem;
@@ -186,7 +186,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    background-image: linear-gradient(transparent);
+    background-image: linear-gradient(216deg, #0000008c, transparent);
     height: 100%;
     border-radius: 1.25rem;
     padding: 2rem;
@@ -306,4 +306,17 @@ details:not([open]) p {
   animation: none;
   opacity: 0;
   max-height: 0;
+}
+
+
+@media (max-width: 500px) {
+  .grid-testimonials {
+    grid-template-columns: minmax(0, 1fr);
+    grid-template-rows: repeat(12, 212px);
+  }
+
+  .card_content {
+    grid-template-areas: none;
+    grid-template-columns: minmax(0, 1fr);
+  }
 }
