--- a/src/app/home/ui/home.component.css
+++ b/src/app/home/ui/home.component.css
@@ -169,7 +169,7 @@
     position: absolute;
     z-index: 1;
     inset: 0;
-    & video {
+    & img {
       width: 100%;
       height: 100%;
       border-radius: 1.25rem;
@@ -289,6 +289,10 @@ details[open] p {
   max-height: 500px;
   opacity: 1;
   animation: 0.5s ease-in-out;
+}
+
+.subtitle {
+  font-size: 2.5rem;
 }
 
 @keyframes fadeIn {
