Feat: Connection view contact.

--- a/src/app/contact/ui/contact-page/contact-page.component.html
+++ b/src/app/contact/ui/contact-page/contact-page.component.html
@@ -3,7 +3,7 @@
     <div class="container-left">
       <h2 class="title">¿Tienes alguna duda?</h2>
       <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua aute irure dolor in reprehenderit velit.</p>
-      <form class="flow">
+      <form action="https://formspree.io/f/mvgzeapk" method="POST" class="flow">
         <div class="row">
           <div>
             <label for="name">Nombre</label>
