--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -64,7 +64,7 @@
       </a>
     </div>
     <div class="header__contact">
-      <a class="btn" focused href="servicios.html#formulario">
+      <a class="btn" focused href="/contact">
         Contáctanos
       </a>
     </div>
