--- a/src/app/profile/ui/layout/layout.component.css
+++ b/src/app/profile/ui/layout/layout.component.css
@@ -139,3 +139,9 @@ input[type="number"]::-webkit-outer-spin-button {
     background-color: #bdbd11;
   }
 }
+
+@media (max-width: 500px) {
+  .formulario {
+    flex-direction: column;
+  }
+}
